--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
+        android:largeHeap="true"
         android:fullBackupContent="true">
         <activity android:name=".MainActivity" >
             <intent-filter>
@@ -23,6 +24,10 @@
         <activity android:name=".MovieDetailActivity"
                   android:label="MovieDetailActivity"
                   android:parentActivityName=".MainActivity"/>
+        <provider
+            android:name=".database.DatabaseProvider"
+            android:authorities="com.android.popularmovies"
+            android:exported="false" />
     </application>
 
 </manifest>
