--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,9 +45,11 @@ dependencies {
     compile 'com.android.support:cardview-v7:26.0.0-alpha1'
     testCompile 'junit:junit:4.12'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.github.bumptech.glide:glide:4.0.0-RC1'
     compile 'com.android.support:preference-v7:26.0.0-alpha1'
     compile 'com.google.code.gson:gson:2.8.1'
     compile 'com.jakewharton:butterknife:8.6.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
+    compile 'com.github.bumptech.glide:glide:4.0.0-RC1'
+    compile 'com.android.support:support-v4:26.0.0-alpha1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC1'
 }
