--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:largeHeap="true"
+        android:hardwareAccelerated="true"
         android:fullBackupContent="true">
         <activity android:name=".MainActivity" >
             <intent-filter>
