--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,16 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.6.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
     compile 'com.android.support:support-v4:26.0.0-alpha1'
+    compile 'com.android.support.test.espresso:espresso-idling-resource:2.2.2'
+
+    // Testing-only dependencies
+    androidTestCompile 'com.android.support:support-annotations:26.0.0-alpha1'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
+    androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2.2'
+    androidTestCompile 'com.android.support.test:rules:0.5'
+    androidTestCompile 'com.android.support.test:runner:0.5'
+    androidTestCompile 'com.android.support.test.espresso:espresso-contrib:2.2.2'
+    androidTestCompile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
+    androidTestCompile 'com.android.support:appcompat-v7:26.0.0-alpha1'
+    androidTestCompile 'com.android.support:design:26.0.0-alpha1'
 }
