--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
     compile 'com.android.support:support-v4:26.0.0-alpha1'
     compile 'com.android.support.test.espresso:espresso-idling-resource:2.2.2'
+    compile 'com.github.orangegangsters:swipy:1.2.3@aar'
 
     // Testing-only dependencies
     androidTestCompile 'com.android.support:support-annotations:26.0.0-alpha1'
