--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,8 @@ dependencies {
     compile 'com.android.support:support-v4:26.0.0-alpha1'
     compile 'com.android.support.test.espresso:espresso-idling-resource:2.2.2'
     compile 'com.github.orangegangsters:swipy:1.2.3@aar'
+    compile 'com.github.bumptech.glide:glide:4.0.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
 
     // Testing-only dependencies
     androidTestCompile 'com.android.support:support-annotations:26.0.0-alpha1'
